update config template

--- a/config/zerotier.yaml.example
+++ b/config/zerotier.yaml.example
@@ -1,5 +1,9 @@
 # ZeroTier Network Controller Configuration
 
 url: 'http://localhost:9993'
+
+# zerotier-cli info
 id: f50a89be2d
+
+# See /var/lib/zerotier-one/authtoken.secret
 token: ypf7adpsl7e3ple3uhq4fciq
